--- a/src/index.scss
+++ b/src/index.scss
@@ -76,3 +76,4 @@ input[type="number"]::-webkit-outer-spin-button {
 
 @import "./components/Owner/profile";
 @import "./components/Register/register";
+@import "./components/ViewListing/ViewListing";
