Updated more stylings for search dropdown

--- a/src/components/Nav/_nav.scss
+++ b/src/components/Nav/_nav.scss
@@ -61,8 +61,8 @@
   &-searched {
       position: absolute;
       top: 40px;
-      left: -1px;
-      background: rgba(255,250,250, .8);
+      left: 0;
+      background: rgba(255,255,255, .9);
       width: 100%;
       max-width: 500px;
     
