--- a/src/components/Login/_login.scss
+++ b/src/components/Login/_login.scss
@@ -1,12 +1,21 @@
 
 .login-button {
-  background-color: #000;
-  margin: 3rem auto;
-  color: #fff;
-  border-radius: 5px;
+  border-radius: 4px;
   font-weight: 700;
-  padding: 2rem 8rem;
+  color: rgba(255, 255, 255, 0.82);
+  background-color: #262525;
+  border: none;
   cursor: pointer;
+  padding: 13px 75px;
+  outline: none;
+  font-size: 2rem;
+  margin-top: 75px;
+  outline: none;
+
+  &:hover {
+    color: #262525;
+    background: rgba(255, 255, 255, 0.82);
+  }
   
 }
 
