--- a/src/components/ViewListing/_ViewListing.scss
+++ b/src/components/ViewListing/_ViewListing.scss
@@ -7,6 +7,7 @@
     margin-top: 5rem;
     border-top: 1px solid lightgray;
     padding-top: 3rem;
+    padding-bottom: 3rem;
     & h2 {
         color: #000;
         font-weight: 700;
@@ -21,6 +22,7 @@
         display: flex;
         flex-direction: column;
         padding: 1rem;
+        padding-left: 0px;
         & input {
             width: 75%;
             height: 3rem;
@@ -63,8 +65,13 @@
         width: 33%;
         & h3 {
             font-weight: 700;
-            text-align: center;
+            font-size: 1.4rem;
         }
+        & img {
+           padding: 1rem 1rem 1rem 0px;
+        }
+
     }
+
    
 }
