--- a/src/components/Nav/_nav.scss
+++ b/src/components/Nav/_nav.scss
@@ -25,9 +25,9 @@
   }
 
   &-right {
-      display: flex;
-      width: 60%;
-      justify-content: space-between;
+    display: flex;
+    width: 60%;
+    justify-content: space-between;
   }
 
   &-logo {
@@ -49,45 +49,42 @@
   }
 
   &-input-wrapper {
-      position: relative;
-      display: inline-block;
-      width: 20%;
-      font-size: 1.8rem;
-      
+    position: relative;
+    display: inline-block;
+    width: 20%;
+    font-size: 1.8rem;
   }
 
   &-icon {
-      position: absolute;
-      top: 8px;
-      left: 15px; 
-      color: black;
-      font-size: 1.5rem;
-      z-index: 500;
-      &__user {
-        font-size: 2rem;
-        cursor: pointer;
+    position: absolute;
+    top: 8px;
+    left: 15px;
+    color: black;
+    font-size: 1.5rem;
+    z-index: 500;
+    &__user {
+      font-size: 2rem;
+      cursor: pointer;
     }
   }
 
   &-input {
-      color: #C2C0C0;
-      display: inline-block;
-      width: 100%;
-      border-radius: 3px;
-      box-shadow: 0 4px 13px 0 rgba(181,181,181,0.43);
-      border: none;
-      padding-top: 8px;
-      padding-bottom: 8px;
-      padding-left: 5rem;
-      height: 3rem;
+    color: #c2c0c0;
+    display: inline-block;
+    width: 100%;
+    border-radius: 3px;
+    box-shadow: 0 4px 13px 0 rgba(181, 181, 181, 0.43);
+    border: none;
+    padding-top: 8px;
+    padding-bottom: 8px;
+    padding-left: 5rem;
+    height: 3rem;
 
-      &::placeholder {
-          color: #C2C0C0;
-         
-          text-align: left;
-      }
-    
-      
+    &::placeholder {
+      color: #c2c0c0;
+
+      text-align: left;
+    }
   }
 
   &-link {
@@ -115,38 +112,73 @@
 }
 
 .profile-dropdown {
-    display: none;
-    flex-direction: row;
-    background-color: border;
-    color: black;
-    text-decoration: none;
-    padding: 0px 29px;
-    justify-content: flex-end;
-    height: 7rem;
-    width: 100%;
-    max-width: 1024px;
-    margin: 0 auto;
-    .dropdown-container {
-        display: flex;
-        flex-direction: column;
-        border: 2px solid black;
-        width: fit-content;
-        height: fit-content;
-        padding: 1rem;
-        float: right;
-        user-select: none;
- }
- 
+  display: none;
+  flex-direction: row;
+  background-color: border;
+  color: black;
+  text-decoration: none;
+  padding: 0px 29px;
+  justify-content: flex-end;
+  height: 7rem;
+  width: 100%;
+  max-width: 1024px;
+  margin: 0 auto;
+  .dropdown-container {
+    display: flex;
+    flex-direction: column;
+    border: 2px solid black;
+    width: fit-content;
+    height: fit-content;
+    padding: 1rem;
+    float: right;
+    user-select: none;
+  }
 }
 
- 
 .dropdown-open {
-    display: flex;
+  display: flex;
 }
 
 .navlinks-mobile {
   display: none;
 }
+
+// //scrollbar stylings
+// //scrollbar stylings
+// .list1::-webkit-scrollbar-thumb {
+//   height: 50px;
+// }
+// .container {
+//   display: flex;
+//   flex-direction: row;
+// }
+// .list1 {
+//   overflow-y: scroll;
+//   height: 100px;
+//   width: 100px;
+//   margin: 50px;
+// }
+// .list1::-webkit-scrollbar-track {
+//   border-radius: 10px;
+//   border: 1px solid blue;
+//   width: 50px;
+// }
+// .list1::-webkit-scrollbar {
+//   width: 50px;
+//   background-color: blue;
+//   border-radius: 10px;
+// }
+// .list1::-webkit-scrollbar-thumb {
+//   border-radius: 100px;
+//   background-color: red;
+//   border: 5px solid blue;
+//   height: 50px;
+// }
+
+// //end scrollbar styings
+
+//end scrollbar styings
+
 @media (max-width: 1000px) {
   .navbar-right {
     width: 60%;
