--- a/src/components/ViewListing/_ViewListing.scss
+++ b/src/components/ViewListing/_ViewListing.scss
@@ -1,77 +1,119 @@
-
 .view-listing {
-    display: flex;
-    flex-direction: row;
-    max-width: 1024px;
-    margin: 0 auto;
-    margin-top: 5rem;
-    border-top: 1px solid lightgray;
-    padding-top: 3rem;
-    padding-bottom: 3rem;
-    & h2 {
-        color: #000;
-        font-weight: 700;
-
-    }
+  display: flex;
+  flex-direction: row;
+  max-width: 1024px;
+  margin: 0 auto;
+  margin-top: 5rem;
+  border-top: 1px solid lightgray;
+  padding-top: 3rem;
+  padding-bottom: 3rem;
+  & h2 {
+    color: #000;
+    font-weight: 700;
+  }
 }
 
 .listing-form-container {
-    width: 35%;
+  width: 35%;
 
-    & .listing-form { 
-        display: flex;
-        flex-direction: column;
-        padding: 1rem;
-        padding-left: 0px;
-        & input {
-            width: 75%;
-            height: 3rem;
-            border-radius: 8px;
-            border: 1px solid lightgrey;
-            margin: 1rem 0px;
-            &::placeholder {
-                padding-left: 10px;
-            }
-        }
-        & .addition {
-            font-weight: 700;
-            cursor: pointer;
-        }
-        & label {
-            font-size: 1.5rem;
-            margin: 0px;
-        }
-        & button {
-            width: 75%;
-            padding: .7rem 0px;
-            border-radius: 10px;
-            border: none;
-            background-color: #8d87ff;
-            color: #fff;
-            margin-top: 2rem;
-        }
-        
+  & .listing-form {
+    display: flex;
+    flex-direction: column;
+    padding: 1rem;
+    padding-left: 0px;
+    & input {
+      width: 75%;
+      height: 3rem;
+      border-radius: 8px;
+      border: 1px solid lightgrey;
+      margin: 1rem 0px;
+      &::placeholder {
+        padding-left: 10px;
+      }
     }
-    
+    & .addition {
+      font-weight: 700;
+      cursor: pointer;
+    }
+    & label {
+      font-size: 1.5rem;
+      margin: 0px;
+    }
+    & button {
+      width: 75%;
+      padding: 0.7rem 0px;
+      border-radius: 10px;
+      border: none;
+      background-color: #8d87ff;
+      color: #fff;
+      margin-top: 2rem;
+    }
+  }
 }
 
 .listings {
-    width: 65%;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    & > div {
-        width: 33%;
-        & h3 {
-            font-weight: 700;
-            font-size: 1.4rem;
-        }
-        & img {
-           padding: 1rem 1rem 1rem 0px;
-        }
-
+  width: 65%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  & > div {
+    width: 33%;
+    & h3 {
+      font-weight: 700;
+      font-size: 1.4rem;
     }
-
-   
+    & img {
+      padding: 1rem 1rem 1rem 0px;
+    }
+  }
 }
+
+//scrollbar stylings
+//scrollbar stylings
+
+.scroll-line {
+  width: 5px !important;
+  height: 100vh;
+  overflow-y: visible;
+  background-color: #000;
+}
+.list1::-webkit-scrollbar-thumb {
+  height: 50px;
+}
+.container {
+  display: flex;
+  flex-direction: row;
+  &:after {
+    display: block;
+    content: "";
+    background: #000;
+    height: inherit;
+    width: 1.5px;
+    position: relative;
+    right: 69px;
+    top: 58px;
+  }
+}
+.list1 {
+  overflow-y: scroll;
+  height: 100vh;
+  width: 100%;
+  margin: 50px;
+}
+.list1::-webkit-scrollbar-track {
+  border-radius: 10px;
+  width: 50px;
+}
+.list1::-webkit-scrollbar {
+  width: 50px;
+  border-radius: 10px;
+}
+.list1::-webkit-scrollbar-thumb {
+  background-image: url("./Images/circle.svg");
+  background-position: center;
+  background-size: cover;
+  height: 50px;
+}
+
+//end scrollbar styings
