--- a/src/components/ViewListing/_ViewListing.scss
+++ b/src/components/ViewListing/_ViewListing.scss
@@ -81,25 +81,26 @@
 .list1::-webkit-scrollbar-thumb {
   height: 50px;
 }
-.container {
+.view-listing-container {
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
   &:after {
     display: block;
     content: "";
     background: #000;
-    height: inherit;
+    height: 69vh;
     width: 1.5px;
     position: relative;
-    right: 69px;
-    top: 58px;
+    right: 19px;
+    top: 5px;
   }
 }
 .list1 {
   overflow-y: scroll;
   height: 100vh;
-  width: 100%;
-  margin: 50px;
+  width: 58rem;
 }
 .list1::-webkit-scrollbar-track {
   border-radius: 10px;
