--- a/src/components/ViewListing/_ViewListing.scss
+++ b/src/components/ViewListing/_ViewListing.scss
@@ -16,13 +16,17 @@
 .listing-form-container {
   width: 35%;
 
+  @media (max-width: 900px) {
+    width: 90%;
+  }
+
   & .listing-form {
     display: flex;
     flex-direction: column;
     padding: 1rem;
     padding-left: 0px;
     & input {
-      width: 75%;
+      width: 100%;
       height: 3rem;
       border-radius: 8px;
       border: 1px solid lightgrey;
@@ -40,7 +44,7 @@
       margin: 0px;
     }
     & button {
-      width: 75%;
+      width: 100%;
       padding: 0.7rem 0px;
       border-radius: 10px;
       border: none;
@@ -52,11 +56,14 @@
 }
 
 .listings {
-  width: 65%;
+  width: 58rem;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-between;
+  @media (max-width: 900px) {
+    width: 90%;
+  }
   & > div {
     width: 33%;
     & h3 {
@@ -101,7 +108,6 @@
 .list1 {
   overflow-y: scroll;
   height: 100vh;
-  width: 58rem;
 }
 .list1::-webkit-scrollbar-track {
   border-radius: 10px;
