--- a/src/components/ViewListing/_ViewListing.scss
+++ b/src/components/ViewListing/_ViewListing.scss
@@ -15,9 +15,13 @@
 
 .listing-form-container {
   width: 35%;
-
+  margin-right: auto;
   @media (max-width: 900px) {
     width: 90%;
+    margin-right: 0px;
+    padding-bottom: 5rem;
+    margin-bottom: 5rem;
+    border-bottom: 1px solid lightgrey;
   }
 
   & .listing-form {
@@ -97,11 +101,11 @@
     display: block;
     content: "";
     background: #000;
-    height: 69vh;
-    width: 1.5px;
+    height: 88vh;
+    width: 0.5px;
     position: relative;
     right: 19px;
-    top: 5px;
+    top: 40px;
   }
 }
 
@@ -114,14 +118,17 @@
   width: 50px;
 }
 .list1::-webkit-scrollbar {
-  width: 50px;
+  width: 35px;
   border-radius: 10px;
 }
 .list1::-webkit-scrollbar-thumb {
-  background-image: url("./Images/circle.svg");
+  //background-image: url("./Images/circle.svg");
   background-position: center;
   background-size: cover;
   height: 50px;
+  background-color: #000;
+  border-top: 40px solid #fff;
+  border-bottom: 38px solid #fff;
 }
 
 //end scrollbar styings
