--- a/src/components/Owner/_profile.scss
+++ b/src/components/Owner/_profile.scss
@@ -1,85 +1,78 @@
 .profile-content {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    width: 100%;
-    max-width: 900px;
-    margin: 5rem auto;
-    align-items: center;
-    & p {
-        line-height: 1.3;
-    }
-    //background-color: white;
-    @media (max-width: 700px) {
-        flex-direction: column;
-     }
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  width: 100%;
+  max-width: 900px;
+  margin: 5rem auto;
+  align-items: center;
+  & p {
+    line-height: 1.3;
+  }
+  //background-color: white;
+  @media (max-width: 800px) {
+    flex-direction: column;
+  }
 }
 
 .products {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    width: 50%;
-    & img {
-        width: 25%;
-    }
-    @media (max-width: 700px) {
-        width: 90%;
-     }
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  width: 50%;
+  & img {
+    width: 25%;
+  }
+  @media (max-width: 800px) {
+    width: 90%;
+  }
 }
 .user-info {
-    img {
-        border-radius: 50%;
-        margin-bottom: 1rem;
-    }
+  img {
+    border-radius: 50%;
+    margin-bottom: 1rem;
+  }
 
-    p {
-        margin: 0;
-        font-size: 12px;
-        width: 145px;
-        color: black;
-        text-align: center;
-        text-transform: capitalize;
-    }
+  p {
+    margin: 0;
+    font-size: 12px;
+    width: 145px;
+    color: black;
+    text-align: center;
+    text-transform: capitalize;
+  }
 }
 
 .addProduct {
-    font-weight: 700;
-    cursor: pointer;
-    padding: .5rem;
+  font-weight: 700;
+  cursor: pointer;
+  padding: 0.5rem;
 }
 
-
 .rating {
-    unicode-bidi: bidi-override;
-    direction: rtl;
-    cursor: pointer;
-    font-size: 1.8rem;
-    width: fit-content;
-    margin: 0 auto;
-  }
-  .rating > span {
-    display: inline-block;
-    position: relative;
-    width: 1.1em;
-  
-  }
-  .rating > span:hover:before,
-  .rating > span:hover ~ span:before {
-     content: "\2605";
-     position: absolute;
-     color: #ccb3ff; 
-  }
+  unicode-bidi: bidi-override;
+  direction: rtl;
+  cursor: pointer;
+  font-size: 1.8rem;
+  width: fit-content;
+  margin: 0 auto;
+}
+.rating > span {
+  display: inline-block;
+  position: relative;
+  width: 1.1em;
+}
+.rating > span:hover:before,
+.rating > span:hover ~ span:before {
+  content: "\2605";
+  position: absolute;
+  color: #ccb3ff;
+}
 
-  .selected {
-
-    
-      &:before {
-     content: "\2605";
-     position: absolute;
-     color: #ccb3ff; 
-    }
-
+.selected {
+  &:before {
+    content: "\2605";
+    position: absolute;
+    color: #ccb3ff;
   }
-
-  
+}
