Amended styles on login page

--- a/src/components/Login/_login.scss
+++ b/src/components/Login/_login.scss
@@ -38,6 +38,7 @@
     font-weight: 500;
     font-size: 3rem;
     margin-bottom: 2rem;
+    text-align: center;
   }
   h2, input, .navbar-icon{
     transform: translateY(35px);
