--- a/src/components/Nav/_nav.scss
+++ b/src/components/Nav/_nav.scss
@@ -123,6 +123,16 @@
           margin-top: 10px;
           margin-bottom: 10px;
           cursor: pointer;
+          color: #3F3F3F;
+          font-weight: 700;
+
+          & span {
+            cursor: pointer;
+          }
+
+          &__close {
+            margin-left: 30px;
+          }
       }
   }
 
@@ -258,6 +268,10 @@
   .navbar-searched__text {
     width: 72%;
   }
+
+  .navbar-left {
+    width: 10%;
+  }
 }
 
 
@@ -265,8 +279,9 @@
 .bar2,
 .bar3 {
   width: 35px;
-  height: 3px;
+  height: 4px;
   background-color: #000;
+  border-radius: 2px;
   opacity: 0.7;
   margin: 6px 0;
   transition: 0.4s;
