--- a/src/components/Nav/_nav.scss
+++ b/src/components/Nav/_nav.scss
@@ -192,18 +192,27 @@
   padding: 0px 29px;
   justify-content: flex-end;
   height: 7rem;
-  width: 100%;
+  width: fit-content;
   max-width: 1024px;
   margin: 0 auto;
+  position: absolute;
+  right: 0px;
   .dropdown-container {
     display: flex;
     flex-direction: column;
     border: 2px solid black;
     width: fit-content;
     height: fit-content;
-    padding: 1rem;
+    padding: 2rem;
     float: right;
     user-select: none;
+    background-color: #4a4a4a;
+    & a {
+      color: #fff;
+      &:hover {
+        color: #8d87ff;
+      }
+    }
   }
 }
 
