--- a/src/index.scss
+++ b/src/index.scss
@@ -46,8 +46,8 @@ a {
 $tundora: #4a4a4a;
 $malibu: rgb(141, 135, 255);
 $malibu-light: rgba(141, 135, 255, 0.59);
-$silver_halice: #AAA8A8;
-$god-gray: #1B1B1B;
+$silver_halice: #aaa8a8;
+$god-gray: #1b1b1b;
 
 //VARIABLES
 $light-gray: $silver_halice;
@@ -68,11 +68,11 @@ input[type="number"]::-webkit-outer-spin-button {
 }
 
 @import "./components/Footer/footer";
-@import './components/Nav/nav';
-
+@import "./components/Nav/nav";
 
 @import "./components/Login/login";
 
 @import "./components/Owner/profile";
 @import "./components/Register/register";
 @import "./components/ViewListing/ViewListing";
+@import "./components/EditProfile/EditProfile";
