--- a/src/components/EditProfile/_editprofile.scss
+++ b/src/components/EditProfile/_editprofile.scss
@@ -16,3 +16,23 @@
   flex-direction: column;
   justify-content: center;
 }
+
+.image-overlay {
+  cursor: pointer;
+  position: absolute;
+  border-radius: 50%;
+  width: 145px;
+  height: 145px;
+  background-color: rgba(0, 0, 0, 0.2);
+  opacity: 0;
+  transition: all 0.3s;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  & p {
+    color: #fff;
+  }
+  &:hover {
+    opacity: 1;
+  }
+}
