fixed issues with navbar spacing and dropdown menu on mobile view

--- a/src/components/ViewListing/_ViewListing.scss
+++ b/src/components/ViewListing/_ViewListing.scss
@@ -80,8 +80,7 @@
   }
 }
 
-//scrollbar stylings
-//scrollbar stylings
+//scrollbar stylings for desktop view
 
 .scroll-line {
   width: 5px !important;
