--- a/src/components/Login/_login.scss
+++ b/src/components/Login/_login.scss
@@ -57,6 +57,8 @@
 
 .section-3 {
   background-color: #161515;
+  padding-top: 40px;
+  padding-bottom: 40px;
 
   &__content {
     max-width: 1024px;
@@ -134,6 +136,85 @@
 
     }
 
+  }
+}
+
+
+.section-4 {
+   background-repeat: no-repeat;
+   background-size: cover; 
+   padding-top: 40px;
+   padding-bottom: 40px;
+
+  &__content {
+    align-items: flex-end;
+  }
+
+  &__left {
+    background-color: #252424;
+    max-width: 424px;
+    width: 50%;
+    padding: 40px 20px;
+
+    & div {
+      width: 60%;
+    }
+
+    & h2 {
+      font-size: 4rem;
+      margin-bottom: 14px;
+      font-weight: bold;
+    }
+
+    & p {
+      font-size: 1.8rem;
+      color: white;
+      font-weight: 300;
+
+      &:not(last-child) {
+        margin-bottom: 25px;
+      }
+    }
+  }
+
+  &__right {
+    width: 40%;
+
+    & h2 {
+      font-size: 5.5rem;
+      font-weight: 700;
+    }
+
+    & p {
+      color: white;
+      font-size: 1.6rem;
+      font-weight: 300px;
+      margin-top: 25px;
+    }
+  }
+}
+
+.section-5 {
+  display: flex;
+
+  &__right {
+    width: 50%;
+    background-repeat: no-repeat;
+    background-size: cover; 
+    padding-top: 70px;
+    padding-bottom: 70px;
+    padding-left: 25px;
+
+    & h2 {
+      text-transform: uppercase;
+      font-size: 7rem;
+      font-weight: 700;
+    }
+  }
+
+  &__left {
+    width: 50%;
+    background-color: #2A2A2A;
   }
 }
 
@@ -272,6 +353,16 @@
   .section-3__content__right__img1 {
     margin-top: 30px;
   }
+
+  .section-4__left {
+    max-width: 608px;
+    width: 80%;
+  }
+
+  .section-4__right {
+    width: 72%;
+    margin-top: 30px;
+  }
 }
 
 @media (max-width: 866px) {
@@ -303,6 +394,19 @@
     margin-left: 0;
     margin-bottom: 23px;
   }
+
+  .section-4__left {
+    width: 100%;
+  }
+
+  .section-4__left div {
+    width: 95%;
+  }
+
+  .section-4__right {
+    width: 87%;
+  }
+
 }
 
 
@@ -318,6 +422,18 @@
 
   .section-3__heading::after {
       bottom: 176px;
+  }
+
+  .section-4__content {
+    width: 95%;
+  }
+
+  .section-4__left h2 {
+    font-size: 3rem;
+  }
+
+  .section-4__left p {
+    font-size: 1.6rem;
   }
 
 }
