scrapping to use a new image uploader

--- a/src/components/CreateListing/_createListing.scss
+++ b/src/components/CreateListing/_createListing.scss
@@ -70,6 +70,7 @@
   width: 40%;
 
   .container {
+    height: 42.4%;
     padding-right: 65px;
     padding-left: 0px;
     @media (max-width: 768px) {
