--- a/src/components/Login/_login.scss
+++ b/src/components/Login/_login.scss
@@ -34,6 +34,13 @@
  & ::placeholder {
    padding-left: 2rem;
  }
+
+  & h1 {
+    font-weight: bold;
+    color: white;
+    font-size: 6rem;
+    margin-bottom: 0;
+  }
   h2 {
     font-weight: 500;
     font-size: 3rem;
@@ -218,6 +225,44 @@
   }
 }
 
+.section-6 {
+  padding-top: 25px;
+  padding-bottom: 25px;
+
+  &__content {
+    max-width: 1024px;
+    width: 80%;
+    margin: 0 auto;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+
+    &_card {
+      width: 26%;
+      border: 1px solid #979797;
+
+      & img {
+        width: 100%;
+        height: 250px;
+        padding: 15px;
+      }
+
+      & h3 {
+        border-top: 1px solid #979797;
+        text-align: center;
+        padding-top: 14px;
+        padding-bottom: 6px;
+        font-weight: bold;
+        color: #4A4A4A;
+      }
+    }
+  }
+}
+
+.card-4, .card-5, .card-6 {
+  margin-top: 40px;
+}
+
 
   h2 {
       color: #fff;
@@ -334,6 +379,16 @@
   }
 }
 
+@media (max-width: 1200px) {
+  .section-6__content_card {
+    width: 30%;
+  }
+
+  .section-6__content_card img{
+    height: 273px;
+  }
+}
+
 
 @media (max-width: 1074px) {
   .section-3__content {
@@ -363,12 +418,46 @@
     width: 72%;
     margin-top: 30px;
   }
+
+  .section-6__content {
+    justify-content: center;
+  }
+
+  .section-6__content_card {
+    width: 40%;
+  }
+
+  .section-6__content_card img {
+    height: 305px;
+  }
+
+  .card-3 {
+    margin-top: 40px;
+  }
+
 }
+
+@media (max-width: 942px) {
+
+  .section-6__content_card img {
+      height: 286px;
+  }
+
+  .section-5__right h2 {
+    font-size: 5rem;
+  }
+
+}
+
 
 @media (max-width: 866px) {
 
     .section-3__content__left {
         width: 90%;
+    }
+
+    .section-6__content_card img {
+      height: 266px;
     }
 
 }
@@ -379,12 +468,45 @@
       width: 100%;
   }
 
+  .section-6__content_card img {
+    height: 237px;
+  }
+
 }
 
 @media (max-width: 704px) {
 
   .section-3__heading::after {
       bottom: 129px;
+  }
+
+  .section-6__content {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .section-6__content_card {
+    width: 70%;
+  }
+
+  .section-6__content_card img {
+    height: auto;
+  }
+
+  .card-2 {
+    margin-top: 40px;
+  }
+
+  .section-5 {
+    flex-direction: column;
+  }
+
+  .section-5__left {
+    width: 100%;
+  }
+
+  .section-5__right {
+    width: 100%;
   }
 
 }
@@ -416,6 +538,10 @@
       bottom: 152px;
   }
 
+  .section-1 h1 {
+    font-size: 5rem;
+  }
+
 }
 
 @media (max-width: 452px) {
@@ -436,6 +562,11 @@
     font-size: 1.6rem;
   }
 
+  .section-1 h1 {
+      text-align: center;
+      width: 50%;
+      font-size: 5rem;
+  }
 }
 
 @media (max-width: 400px) {
@@ -471,6 +602,10 @@
 
   .section-3__heading::after {
       bottom: 221px;
+  }
+
+  .section-5__right h2 {
+    font-size: 4rem;
   }
 
 }
