--- a/src/_App.scss
+++ b/src/_App.scss
@@ -12,7 +12,7 @@
 .app-wrapper {
   display: -webkit-flex;
   flex-direction: column;
-  min-height: -webkit-fill-available;
+  height: -webkit-fill-available;
 }
 
 .footer {
