fixed edit item modal bug

--- a/src/components/Owner/_profile.scss
+++ b/src/components/Owner/_profile.scss
@@ -78,6 +78,11 @@
 }
 
 .btn-primary {
+  background-color: #4a4a4a !important;
+  border-color: #4a4a4a !important;
+}
+
+.submit-button {
   background-color: #8d87ff !important;
   border-color: #8d87ff !important;
 }
