--- a/src/components/Footer/_footer.scss
+++ b/src/components/Footer/_footer.scss
@@ -59,7 +59,7 @@
     }
 
     &-link {
-        color: $malibu-light;
+        color: white;
         font-size: 1.5rem;
         text-decoration: none;
         display: block;
