--- a/src/components/Nav/_nav.scss
+++ b/src/components/Nav/_nav.scss
@@ -67,6 +67,9 @@
       background: rgba(255,255,255, .9);
       width: 100%;
       max-width: 500px;
+      -webkit-box-shadow: 0px 7px 18px 3px rgba(255,255,255,0.41);
+      -moz-box-shadow: 0px 7px 18px 3px rgba(255,255,255,0.41);
+      box-shadow: 0px 7px 18px 3px rgba(255,255,255,0.41);
     
       &__content {
         width: 100%;
