--- a/src/index.scss
+++ b/src/index.scss
@@ -3,6 +3,7 @@
 html {
   box-sizing: border-box;
   font-size: 62.5%;
+  scroll-behavior: smooth;
 }
 
 *,
@@ -76,3 +77,4 @@ input[type="number"]::-webkit-outer-spin-button {
 @import "./components/Owner/profile";
 @import "./components/Register/register";
 @import "./components/CreateListing/createListing";
+@import "./components/ViewItem/viewitem";
