--- a/src/components/Login/_login.scss
+++ b/src/components/Login/_login.scss
@@ -247,6 +247,9 @@
   &__left {
     width: 50%;
     background-color: #2A2A2A;
+    color: white;
+    padding: 5% 7% 5% 7%;
+    font-size: 2.5rem;
   }
 }
 
