--- a/src/components/Nav/_nav.scss
+++ b/src/components/Nav/_nav.scss
@@ -60,7 +60,7 @@
   &-input-wrapper {
     position: relative;
     display: inline-block;
-    width: 20%;
+    width: 60%;
     font-size: 1.8rem;
   }
 
@@ -120,6 +120,26 @@
       text-overflow: ellipsis;
       margin-left: 8px;
       margin-right: 8px;
+
+      &__link {
+        color: #3f3f3f;
+        text-decoration: none;
+        cursor: pointer;
+
+        &:hover {
+          color: #3f3f3f;
+          color: $purple;
+          text-decoration: none;
+        }
+
+        &:active {
+          
+          color: #3f3f3f;
+          text-decoration: none;
+        
+        }
+
+      }
     }
 
     &__location {
