--- a/src/components/Owner/_profile.scss
+++ b/src/components/Owner/_profile.scss
@@ -9,7 +9,7 @@
   & p {
     line-height: 1.3;
   }
-  //background-color: white;
+  //background-color: white;//
   @media (max-width: 800px) {
     flex-direction: column;
   }
@@ -104,4 +104,19 @@
 
 .error {
   color: #ff0000;
+}
+
+.profile-pic {
+  width:145px;
+  height: 145px;
+  max-width: 100%;
+}
+
+.listed-item {
+  cursor:pointer;
+  width: 150px;
+  height: auto;
+  & img {
+    width: 100%;
+  }
 }
