--- a/src/components/Owner/_profile.scss
+++ b/src/components/Owner/_profile.scss
@@ -9,7 +9,7 @@
   & p {
     line-height: 1.3;
   }
-  //background-color: white;//
+  //background-color: white;////
   @media (max-width: 800px) {
     flex-direction: column;
   }
