--- a/src/components/CreateListing/_createListing.scss
+++ b/src/components/CreateListing/_createListing.scss
@@ -133,6 +133,13 @@
 
     }
   }
+
+  .long-input {
+    height: 70px;
+    width: 100%;
+    background-color: #f5f4f4;
+    font-size: 2rem;
+  }
 }
 
 .right-side {
@@ -174,6 +181,9 @@
     width: 100%;
     background-color: #f5f4f4;
     font-size: 2.5rem;
+  }
+  .price {
+    width: 90%;
   }
 }
 
