--- a/src/components/EditProfile/_EditProfile.scss
+++ b/src/components/EditProfile/_EditProfile.scss
@@ -11,10 +11,39 @@
   cursor: pointer;
 }
 
+.edit-input {
+  height: 3rem !important;
+}
 .edit-content-container {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  margin-bottom: 1rem;
+}
+//
+.edit-form {
+  display: flex;
+  flex-direction: column;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  & select {
+    height: 3rem;
+  }
+  & input,
+  select {
+    margin: 3px 0px;
+    background-color: #f5f4f4;
+    border: 1px solid darken(#f5f4f4, 20%);
+  }
+}
+.edit-button {
+  background-color: #262525;
+  color: rgba(255, 255, 255, 0.82);
+  width: fit-content;
+  margin: 0 auto;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  cursor: pointer;
 }
 
 .image-overlay {
@@ -33,10 +62,6 @@
     color: #fff;
   }
   &:hover {
-    
     opacity: 1;
   }
-
- 
-  
 }
